[project]
name = "deep-research"
version = "0.1.0"
description = "A multi-agent research system that automates academic paper discovery, search, and summarization using Google ADK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.22.1",
    "litellm>=1.81.0",
    "paper-search-mcp>=0.1.3",
]
